<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SaveInfo"
    android:background="@drawable/mirusha"
    >


    <EditText
        android:id="@+id/d_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:hint="@string/vendi"
        android:textColor="@color/si"
        android:textColorHighlight="@color/design_default_color_secondary_variant"
        android:textColorHint="#fff"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/d_data_mbarim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:hint="@string/data_p"
        android:textColor="@color/si"
        android:textColorHint="#fff"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/d_data_fillim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:hint="@string/data_f"
        android:textColor="@color/si"
        android:textColorHint="#fff"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:onClick="saveData"
        android:text="@string/save"
        android:textColor="#fff" />


</LinearLayout>